# bluepill

./: .gitignore  .travis.yml  0001-Add-new-logic-test-target-without-test-host.-Unhoste.patch  ARCHITECTURE.md  BUILD.bazel  Bluepill.podspec  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  VERSION  WORKSPACE  a.txt  azure-pipelines.yml  build.sh  circle.yml  csv.diff  result_bptestinspector.txt  results.txt
bluepill/: BUILD.bazel  Info.plist  libBPMacTestInspector.dylib  libBPXCTestWrapper.dylib
bluepill/bluepill.xcodeproj/: project.pbxproj
bluepill/bluepill.xcodeproj/xcshareddata/xcschemes/: bluepill-tests.xcscheme  bluepill.xcscheme
bluepill/src/: BPApp.h  BPApp.m  BPHTMLReportWriter.h  BPHTMLReportWriter.m  BPPacker.h  BPPacker.m  BPReportCollector.h  BPReportCollector.m  BPRunner.h  BPRunner.m  BPSwimlane.h  BPSwimlane.m  BPTestReportHTML.h  main.m
bluepill/tests/: BPAppTests.m  BPCLITests.m  BPHTMLReportWriteTests.m  BPIntegrationTests.m  BPPackerTests.m  BPReportCollectorTests.m  BPRunnerTests.m
bluepill/tests/Resource Files/: Expected-TEST-FinalReport-for-invalid-xml.xml  TEST-FinalReport.xml  times.json
bluepill/tests/Resource Files/BPLogicTestFixture_arm64.xctest/: BPLogicTestFixture_arm64  Info.plist
bluepill/tests/Resource Files/BPLogicTestFixture_swift_x86_64.xctest/: BPLogicTestFixture_swift_x86_64  Info.plist
bluepill/tests/Resource Files/BPLogicTestFixture_x86_64.xctest/: BPLogicTestFixture_x86_64  Info.plist
bluepill/tests/simulator-invalid-xml/1/: result1-1.xml
bluepill/tests/simulator-invalid-xml/2/: result2-1.xml  result2-3.xml
bluepill/tests/simulator-invalid-xml/3/: result3.xml
bluepill/tests/simulator-invalid-xml/4/: result4.xml
bluepill/tests/simulator/1/: result1.xml
bluepill/tests/simulator/2/: result2.xml
bluepill/tests/simulator/3/: result3.xml
bluepill/tests/simulator/4/: result4.xml
bp/: BPVersion.h  BUILD.bazel  Info.plist  bp_test_runner.bzl  bptestrunner.py  libBPTestInspector.dylib  main.m
bp/bp.xcodeproj/: project.pbxproj
bp/bp.xcodeproj/xcshareddata/xcschemes/: bp-tests.xcscheme  bp.xcscheme  bplib.xcscheme
bp/bplib/: BPConfiguration.h  BPConfiguration.m  BPTestBundleConnection.h  BPTreeParser.m  BPUtils.h  BPUtils.m  BPVersion.h  Info.plist  SimulatorHelper.m  bplib.h
bp/bplib/PrivateHeaders/CoreSimulator/: SimDevicePair.h  SimDevicePasteboardConnection.h  SimLocalThrowable.h
bp/bplib/PrivateHeaders/DTXConnectionServices/: DTXMessenger-Protocol.h
bp/bplib/PrivateHeaders/XCTest/: XCElementAttributesPrivate-Protocol.h  XCEventGenerator.h  XCPointerEvent.h  XCPointerEventPath.h  XCSourceCodeRecording.h  XCTActivityRecordStack.h  XCTRunnerDaemonSession.h  XCTUniformTypeIdentifier.h  XCTWaiterDelegate-Protocol.h  XCTestCase.h  XCUIElementQuery.h  XCUIElementTypeQueryProvider-Protocol.h  _XCTestObservationCenterImplementation.h
bp/src/: BPApplicationLaunchHandler.m  BPConfiguration.h  BPConfiguration.m  BPConstants.h  BPExecutionContext.h  BPExecutionPhaseProtocol.h  BPExitStatus.h  BPExitStatus.m  BPHandler.h  BPHandler.m  BPReporters.h  BPSimulator.h  BPSimulator.m  BPStats.h  BPStats.m  BPTMDControlConnection.h  BPTMDControlConnection.m  BPTMDRunnerConnection.h  BPTMDRunnerConnection.m  BPTestBundleConnection.h  BPTestBundleConnection.m  BPTestClass.m  BPTestDaemonConnection.h  BPTestDaemonConnection.m  BPTestInspectionHandler.h  BPTestInspectionHandler.m  BPTreeObjects.m  BPTreeParser.m  BPUtils.h  BPUtils.m  BPWriter.h  BPXCTestFile.h  BPXCTestFile.m  Bluepill.m  NSString+IdentifierString.h  NSString+IdentifierString.m  SimulatorHelper.h  SimulatorHelper.m  SimulatorMonitor.m  bplib.h  (+1 more)
bp/src/Helpers/: BPWaitTimer.m
bp/src/PrivateHeaders/CoreSimulator/: CDStructures.h  CoreSimulator.h  NSDictionary-SimEnvp.h  NSDictionary-SimSaveWithError.h  NSError-SimError.h  NSFileManager-CoreSimulator.h  NSPasteboardItemDataProvider-Protocol.h  NSSecureCoding-Protocol.h  NSString-SIMCPUType.h  NSString-SIMPackedVersion.h  NSUserDefaults-SimDefaults.h  SimAudioDescriptorState-Protocol.h  SimDevice.h  SimDeviceBootInfo.h  SimDeviceIOClientProtocol-Protocol.h  SimDeviceIOLogger-Protocol.h  SimDeviceIOPortDescriptorState-Protocol.h  SimDeviceIOProtocol-Protocol.h  SimDeviceIOServerLogger.h  SimDeviceNotifier-Protocol.h  SimDevicePasteboardItem.h  SimDeviceSet.h  SimHostResourceChecker.h  SimLegacyHIDDescriptorState-Protocol.h  SimMachPortServer.h  SimNSPasteboardItem.h  SimPasteboardItemWrappedData.h  SimPasteboardSyncPool.h  SimProfilesPathMonitor.h  SimRuntime.h  SimRuntimePairingReuirements.h  SimServiceContext.h
bp/src/PrivateHeaders/DTXConnectionServices/: DTXBlockCompressorLibCompression.h  DTXChannel.h  DTXConnection.h  DTXFoundationURLTransport.h  DTXMessage.h  DTXMessageParser.h  DTXProxyChannel.h  DTXResourceTracker.h  DTXService.h  DTXSharedMemoryTransport.h  DTXSocketTransport.h  _DTXProxy.h
bp/src/PrivateHeaders/XCTAutomationSupport/: CDStructures.h  NSArray-XCTElementQueryAdditions.h  NSCoding-Protocol.h  NSCopying-Protocol.h  (+66 more)
bp/src/Simulator/: BPSimulator.m  SimulatorHelper.m  SimulatorMonitor.m
bp/tests/: BPCLITests.m  BPConfiguration+Test.h  BPConfigurationTests.m  BPIntTestCase.h  BPIntTestCase.m  BPRegexTests.m  BPReportTests.m  BPTestHelper.h  BPTestHelper.m  BPTreeParserTests.m  BPUtilsTests.m  BluepillHostedTests.m  BluepillTests.m  BluepillUnhostedTests.m  SimulatorHelperTests.m  WaitTimerTests.m
bp/tests/Resource Files/: BPAppNegativeTests-results.xml  crash_tests_attempt_2.xml  crash_tests_with_retry_attempt_1.xml  failure_retry_report.xml  fatal_tests_attempt_2.xml  fatal_tests_attempt_3.xml  hanging_tests.xml  simulator-preferences.plist  testConfig-busted.json  testConfig.json  testConfigRelativePath.json
bp/tests/Unhosted Tests/: BPTestCaseInfoTests.m  BluepillUnhostedBatchingTests.m  BluepillUnhostedTests.m
bp/tests/Utils/: BPTestUtils.h  BPTestUtils.m
bptestrunner/: BUILD.bazel  WORKSPACE  bluepill_batch_test.bzl  bluepill_batch_test_runner.template.sh  bluepill_test_runner.template.sh  ios_bluepill_test_runner.bzl  main.py
(+1303 files in other folders)
