load(
    "@build_bazel_rules_apple//apple:macos.bzl",
    "macos_command_line_application",
)
load(
    "@build_bazel_rules_apple//apple:versioning.bzl",
    "apple_bundle_version",
)

licenses(["notice"])

objc_library(
    name = "bpsrc",
    hdrs = glob(["src/*.h"]) + ["//:bp_version"],
    srcs = glob([
        "src/**/*.m",
        "src/PrivateHeaders/**/*.h",
    ]),
    enable_modules = True,
    visibility = ["//visibility:public"],
    copts = [
        "-mmacosx-version-min=10.13"
    ],
)

apple_bundle_version(
    name = "bpversion",
    build_version = "1.0",
)

macos_command_line_application(
    name = "bp",
    bundle_id = "com.linkedin.bp",
    infoplists = [":Info.plist"],
    minimum_os_version = "10.13",
    version = ":bpversion",
    linkopts = [
        "-F",
        "/Library/Developer/PrivateFrameworks",
        "-F",
        "__BAZEL_XCODE_DEVELOPER_DIR__/../SharedFrameworks",
        "-weak_framework",
        "CoreSimulator",
        "-weak_framework",
        "DVTiPhoneSimulatorRemoteClient",
        "-weak_framework",
        "XCTest",
        "-framework",
        "AppKit",
    ],
    deps = [":bpsrc"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "bp_py",
    srcs = glob([
        "*.py",
    ]),
    data = [
        ":bp",
    ],
    visibility = ["//visibility:public"],
)
