package(default_visibility = ["//visibility:public"])

load("@subpar//:subpar.bzl", "par_binary")

exports_files([
    "bluepill_test_runner.template.sh",
    "bluepill_batch_test_runner.template.sh"
])

par_binary(
    name = "bptestrunner",
    srcs = glob([
        "*.py",
    ]),
    main = "main.py",
    deps = [
        "//bluepill:bluepill_py",
        "//bp:bp_py",
    ],
)
