package(default_visibility = ["//visibility:public"])

load("@bazel_skylib//rules:native_binary.bzl", "native_binary")

native_binary(
    name = "bluepill",
    src = 'bin/bluepill',
    out = "bluepill",
)

native_binary(
    name = "bp",
    src = 'bin/bp',
    out = "bp",
)

native_binary(
    name = "libBPTestInspector.dylib",
    src = 'bin/libBPTestInspector.dylib',
    out = "libBPTestInspector.dylib",
)

native_binary(
    name = "libBPMacTestInspector.dylib",
    src = 'bin/libBPMacTestInspector.dylib',
    out = "libBPMacTestInspector.dylib",
)

exports_files([
    "bluepill_batch_test_runner.template.sh"
])
